--- a/style.css
+++ b/style.css
@@ -14,8 +14,7 @@ body {
 	padding: 30px;
 }
 
-/* navigation */
-/* navigation top */
+/* navigation */ /* navigation top */
 
 .container-fluid {
 	position: relative;
@@ -26,7 +25,7 @@ body {
 	margin: auto;
 	background-color: #f72210;
 	color: #fff;
-	padding: 50px 0px 10px 0px;
+	padding: 50px 0px 10px 1px;
 	max-width: 1310px;
 	transition: all 0.1s;
 }
@@ -157,7 +156,7 @@ body {
 	font-weight: 400;
 }
 
-/*main container*/
+/* main container */
 .content {
 	padding-top: 100px;
 	background-color: #fff;
@@ -263,8 +262,8 @@ h6 {
 }
 
 .byline {
-	color: #555555;
-	padding: 0px;
+	color: #555;
+	padding: 0.1px;
 	margin: 0px;
 }
 
@@ -321,7 +320,6 @@ h6 {
 	color: #fff;
 	width: 101px;
 	padding: 10px 5px 10px 12px;
-
 	font: bold 18px/18px "Roboto", sans-serif;
 	margin-top: 0px;
 	background-color: #666;
@@ -651,7 +649,7 @@ footer {
 		display: none !important;
 	}
 
-	/*nav bottom*/
+	/* nav bottom */
 	.header-bottom {
 		display: none;
 	}
