--- a/style.css
+++ b/style.css
@@ -44,6 +44,11 @@ body {
   left: 50%;
 }
 
+img {
+  position: relative;
+  width: 100%;
+}
+
 .logoimg > img {
   width: 100%;
 }
@@ -62,6 +67,10 @@ body {
   bottom: 10px;
 }
 
+.page-nav > li > a:hover {
+  color: #f72210 !important;
+}
+
 #signin a {
   text-decoration: none;
   color: #f72210;
@@ -73,6 +82,13 @@ body {
   padding-right: 10px;
   padding-left: 10px;
   z-index: 9999;
+}
+
+.magazine-article .category span:first-of-type {
+  padding: 3px 7px;
+  background-color: #f72210;
+  color: #fff;
+  margin-right: 7px;
 }
 
 #signin span {
@@ -128,14 +144,6 @@ body {
   border-left: 1px solid #d9d9d9;
 }
 
-.page-nav > li > a {
-  cursor: pointer;
-}
-
-.page-nav > li > a:hover {
-  color: #f72210 !important;
-}
-
 .page-nav :first-child,
 .page-nav :last-child {
   border-width: 0.1px;
@@ -154,13 +162,7 @@ body {
   font-weight: 400;
 }
 
-/* main container */
-.content {
-  padding-top: 100px;
-  background-color: #fff;
-}
-
-/* col 1  */
+/* main container */    /* col 1  */
 
 .block-title {
   color: #03030366;
@@ -178,11 +180,6 @@ article {
 .wrap {
   position: relative;
   min-height: 33px;
-}
-
-img {
-  position: relative;
-  width: 100%;
 }
 
 .pic-on {
@@ -412,14 +409,6 @@ h6 {
   margin-bottom: 10px;
 }
 
-.magazine-article .category span:first-of-type {
-  padding: 3px 7px;
-  background-color: #f72210;
-  color: #fff;
-  margin-right: 7px;
-}
-
-
 .article-title {
   font-size: 20px;
   color: #000;
@@ -573,7 +562,7 @@ footer {
   text-align: right;
 }
 
-.media-icons>i {
+.media-icons > i {
   vertical-align: bottom;
   font-size: 25px;
   color: #666;
@@ -633,7 +622,7 @@ footer {
 
   #signin {
     font-size: 14px;
-    bottom: 0px;
+    bottom: 0.1px;
   }
 
   #signin a {
